hphp/hack/test/error_formatting_highlighted/message_order.php.exp
error: Parsing[1002] Local variables cannot have type annotations in Hack. [1]

message_order.php:4:7
    2 | 
    3 | function example(): void {
[1] 4 |   int $x = 1;
    5 | }

error: Naming[2049] Unbound name: int (a global constant) [1]

message_order.php:4:3
    2 | 
    3 | function example(): void {
[1] 4 |   int $x = 1;
    5 | }

error: Typing[4106] Unbound global constant (Typing) [1]

message_order.php:4:3
    2 | 
    3 | function example(): void {
[1] 4 |   int $x = 1;
    5 | }

3 errors found
