hphp/hack/test/error_formatting_highlighted/message_order.php
<?hh

function example(): void {
  int $x = 1;
}
